Wed Feb 28 13:50:41 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/AutomakeWorkspaceCreator.pm:

          Since the top-level Makefile is always added to
          configure.ac.Makefiles, we need to mark '.' as beeing seen so that
          ./Makefile is not added too.

        * modules/Options.pm:

          Recognize -help so that an error is not printed, but the usage
          still is.

        * modules/WorkspaceCreator.pm:

          Ignore option errors with no message (in case -help is used on the
          command line within a workspace).

Tue Feb 27 15:17:35 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:

          Modified this script to look one directory up from the templates
          directory for docs/templates to find documentation for templates
          that do not reside in the MPC tree.

Tue Feb 27 13:33:42 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/Creator.pm:

          Avoid an infinite loop when processing -value_template foo=$(FOO).
          Thanks to Steve Huston for reporting this.

Mon Feb 26 17:30:03 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BDS4WorkspaceCreator.pm:
        * modules/BMakeWorkspaceCreator.pm:
        * modules/CCWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/VC6WorkspaceCreator.pm:
        * modules/VC7WorkspaceCreator.pm:
        * modules/WinWorkspaceBase.pm:

          Added a Windows Workspace base module to override methods that are
          used in Creator::expand_variables().

        * modules/Options.pm:

          Reverted my change from Wed Jan 24 19:04:58 UTC 2007.  It turns
          out that the "extra parameter" was still needed.

        * modules/ProjectCreator.pm:

          Corrected a comment about sorting template variable values.

Mon Feb 26 13:09:44 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
