@@ -1,3 +1,10 @@
+Fri Mar  2 15:57:34 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/Creator.pm:
+
+          Fixed a bug in subtraction where if the element to be subtracted
+          is the first element it would not be removed.
+
 Wed Feb 28 13:50:41 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/AutomakeWorkspaceCreator.pm:
